updated staffing-request-dtos