@@ -3,44 +3,29 @@ package com.airport.admin.airport_admin.features.staffing;
 import com.airport.admin.airport_admin.enums.RosterStatus;
 import com.airport.admin.airport_admin.features.jobLevel.JobLevelRepository;
 import com.airport.admin.airport_admin.features.jobRole.JobRoleRepository;
-import com.airport.admin.airport_admin.features.location.Location;
-import com.airport.admin.airport_admin.features.location.LocationRepository;
-import com.airport.admin.airport_admin.features.staffing.dto.*;
-import com.airport.admin.airport_admin.features.staffing.model.StaffingRequest;
-import com.airport.admin.airport_admin.features.staffing.model.StaffingRequestDay;
-import com.airport.admin.airport_admin.features.staffing.model.StaffingRequestItem;
-import com.airport.admin.airport_admin.features.user.User;
-import com.airport.admin.airport_admin.features.user.UserRepository;
-
+import com.airport.admin.airport_admin.features.location.*;
+import com.airport.admin.airport_admin.features.staffing.dto.StaffingRequest.*;
+import com.airport.admin.airport_admin.features.staffing.dto.StaffingRequestDay.*;
+import com.airport.admin.airport_admin.features.staffing.dto.StaffingRequestItem.*;
+import com.airport.admin.airport_admin.features.staffing.model.*;
+import com.airport.admin.airport_admin.features.user.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class StaffingRequestMapper {
 
-    @Autowired
-    private UserRepository userRepository;
+    @Autowired private UserRepository userRepository;
+    @Autowired private LocationRepository locationRepository;
+    @Autowired private JobRoleRepository jobRoleRepository;
+    @Autowired private JobLevelRepository jobLevelRepository;
 
-    @Autowired
-    private LocationRepository locationRepository;
-
-    @Autowired
-    private JobRoleRepository jobRoleRepository;
-
-    @Autowired
-    private JobLevelRepository jobLevelRepository;
-
-    //for submit requests
-    public StaffingRequest mapDtoToEntity(StaffingRequestsDto dto) {
-        if (dto.getManagerId()==null){
-           throw new IllegalArgumentException("Manager id is null");
-        }else if(dto.getLocationId() == null){
-            throw new IllegalArgumentException("Location id is null");
-        }
-        // Lookup manager and location
+    // 1. Convert Create DTO to Entity
+    public StaffingRequest mapCreateDtoToEntity(StaffingRequestCreateDto dto) {
         User manager = userRepository.findById(dto.getManagerId())
                 .orElseThrow(() -> new RuntimeException("Manager not found"));
         Location location = locationRepository.findById(dto.getLocationId())
@@ -51,30 +36,25 @@ public class StaffingRequestMapper {
         request.setLocation(location);
         request.setRequestType(dto.getRequestType());
         request.setReason(dto.getReason());
-        request.setStatus(RosterStatus.PENDING); // Default status
+        request.setStatus(RosterStatus.PENDING);
 
         List<StaffingRequestDay> dayEntities = new ArrayList<>();
-        for (StaffingRequestDayDto dayDto : dto.getDays()) {
+        for (StaffingRequestDayCreateDto dayDto : dto.getDays()) {
             StaffingRequestDay day = new StaffingRequestDay();
             day.setRequest(request);
-            day.setDate(dayDto.getDate()); // Assumes yyyy-MM-dd
+            day.setDate(dayDto.getDate());
 
             List<StaffingRequestItem> itemEntities = new ArrayList<>();
-            for (StaffingRequestItemDto itemDto : dayDto.getItems()) {
-                if(itemDto.getJobLevelId() == null){
-                    throw new IllegalArgumentException("Job level id is null");
-                }else if(itemDto.getJobRoleId() == null){
-                    throw new IllegalArgumentException("Job role is null");
-                }
+            for (StaffingRequestItemCreateDto itemDto : dayDto.getItems()) {
                 StaffingRequestItem item = new StaffingRequestItem();
                 item.setDay(day);
+                item.setRequiredCount(itemDto.getRequiredCount());
+                item.setStartTime(itemDto.getStartTime());
+                item.setEndTime(itemDto.getEndTime());
                 item.setJobRole(jobRoleRepository.findById(itemDto.getJobRoleId())
                         .orElseThrow(() -> new RuntimeException("JobRole not found")));
                 item.setJobLevel(jobLevelRepository.findById(itemDto.getJobLevelId())
                         .orElseThrow(() -> new RuntimeException("JobLevel not found")));
-                item.setRequiredCount(itemDto.getRequiredCount());
-                item.setStartTime(itemDto.getStartTime());
-                item.setEndTime(itemDto.getEndTime());
                 itemEntities.add(item);
             }
 
@@ -86,29 +66,23 @@ public class StaffingRequestMapper {
         return request;
     }
 
-    //for get requests
-    public StaffingRequestsSummaryDto toSummaryDto(StaffingRequest request) {
-        StaffingRequestsSummaryDto dto = new StaffingRequestsSummaryDto();
+    // 2. Convert Entity to Response DTO (list view)
+    public StaffingRequestResponseDto toResponseDto(StaffingRequest request) {
+        StaffingRequestResponseDto dto = new StaffingRequestResponseDto();
         dto.setId(request.getId());
         dto.setManagerId(request.getManager().getId());
         dto.setManagerFirstName(request.getManager().getFirstName());
         dto.setManagerLastName(request.getManager().getLastName());
-
         dto.setLocationId(request.getLocation().getId());
         dto.setLocationName(request.getLocation().getLocationName());
-
-        dto.setRequestType(request.getRequestType());
-
         dto.setReason(request.getReason());
-
-        dto.setCreatedAt(request.getCreatedAt());
-
+        dto.setRequestType(request.getRequestType());
         dto.setStatus(request.getStatus());
-
+        dto.setCreatedAt(request.getCreatedAt());
         return dto;
     }
 
-    //for /id get request
+    // 3. Convert Entity to Detail DTO (for /id)
     public StaffingRequestDetailDto toDetailDto(StaffingRequest request) {
         StaffingRequestDetailDto dto = new StaffingRequestDetailDto();
         dto.setId(request.getId());
@@ -127,8 +101,8 @@ public class StaffingRequestMapper {
             dayDto.setId(day.getId());
             dayDto.setDate(day.getDate());
 
-            List<StaffingRequestItemDetailDto> itemDtos = day.getItems().stream().map(item -> {
-                StaffingRequestItemDetailDto itemDto = new StaffingRequestItemDetailDto();
+            List<StaffingRequestItemResponseDto> itemDtos = day.getItems().stream().map(item -> {
+                StaffingRequestItemResponseDto itemDto = new StaffingRequestItemResponseDto();
                 itemDto.setId(item.getId());
                 itemDto.setJobRoleName(item.getJobRole().getRoleName());
                 itemDto.setJobLevelName(item.getJobLevel().getLevelName());
@@ -136,16 +110,13 @@ public class StaffingRequestMapper {
                 itemDto.setStartTime(item.getStartTime());
                 itemDto.setEndTime(item.getEndTime());
                 return itemDto;
-            }).toList();
+            }).collect(Collectors.toList());
 
             dayDto.setItems(itemDtos);
             return dayDto;
-        }).toList();
+        }).collect(Collectors.toList());
 
         dto.setDays(dayDtos);
         return dto;
     }
-
-
-
 }
